apps/rust/src/tui/snapshots/prt__tui__test_flow__tests__test_candidate_list_100x30.snap
---
source: apps/rust/src/tui/test_flow.rs
assertion_line: 4443
expression: "$crate :: tui :: snapshot_value(terminal.backend())"
---
"◆ prt <version>  ·  test  ·  revisão                                                                    "
"card pronto  ·  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  ·  0%"
"╭ Card de teste ────────────────────────────────────────╮ ╭ ⚙ Settings ────────────────────────────╮"
"│ # Card exemplo                                      ▲ │ │   AreaPath  ·  ex.: MeuProjeto\Time    │"
"│                                                     █ │ │ —                                      │"
"│                                                     █ │ │                                        │"
"│ ## Objetivo                                         █ │ │   Responsável (AssignedTo)  ·  email   │"
"│                                                     █ │ │ ou vazio                               │"
"│ X                                                   █ │ │ —                                      │"
"│                                                     █ │ │                                        │"
"│      ╭ Verificar possíveis cards ─────────────────────────────────────────────────────────╮      │"
"│      │ a busca usa título exato e relação com o Work Item pai                             │      │"
"│      │ ▸ #77  Card exemplo  · pai ✓ · campos 6/6 · 2026-09-11T12:00:00Z                   │      │"
"│      │     https://dev.azure.com/org/proj/_workitems/edit/77                              │      │"
"│      │   #78  Card exemplo  · pai ? · campos 2/6 · 2026-09-11T11:00:00Z                   │ 2)   │"
"│      │     https://dev.azure.com/org/proj/_workitems/edit/78                              │      │"
"│      │                                                                                    │      │"
"│      │ enter usar selecionado · d excluir · r atualizar · esc voltar                      │ório) │"
"│      ╰────────────────────────────────────────────────────────────────────────────────────╯      │"
"│                                                     █ │ │                                        │"
"│                                                     █ │ │   Programa *  ·  campo de programa do  │"
"│                                                     █ │ │ perfil (obrigatório)                   │"
"│                                                     █ │ │ —                                      │"
"│                                                     ║ │ │                                        │"
"│                                                     ║ │ │                                        │"
"│                                                     ║ │ │                                        │"
"│                                                     ║ │ │                                        │"
"│                                                     ▼ │ │                                        │"
"╰───────────────────────────────────────────────────────╯ ╰────────────────────────────────────────╯"
"↑/↓ selecionar · d excluir · r atualizar · esc voltar                                               "
