apps/rust/src/tui/snapshots/prt__tui__test_flow__tests__test_candidate_lookup_100x30.snap
---
source: src/tui/test_flow.rs
expression: terminal.backend()
---
"◆ prt 6.0.1  ·  test  ·  revisão                                                                    "
"consultando Test Cases recentes…  ·  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░"
"╭ Card de teste ────────────────────────────────────────╮ ╭ ⚙ Settings ────────────────────────────╮"
"│ # Card exemplo                                      ▲ │ │   AreaPath  ·  ex.: MeuProjeto\Time    │"
"│                                                     █ │ │ —                                      │"
"│                                                     █ │ │                                        │"
"│ ## Objetivo                                         █ │ │   Responsável (AssignedTo)  ·  email   │"
"│                                                     █ │ │ ou vazio                               │"
"│ X                                                   █ │ │ —                                      │"
"│                                                     █ │ │                                        │"
"│                                                     █ │ │   IterationPath  ·  ex.:               │"
"│                                                     █ │ │ MeuProjeto\Sprint 12                   │"
"│      ╭ Verificar possíveis cards ─────────────────────────────────────────────────────────╮      │"
"│      │                                                                                    │      │"
"│      │ enter usar selecionado · d excluir · r atualizar · esc voltar                      │ 2)   │"
"│      │                                                                                    │      │"
"│      ╰────────────────────────────────────────────────────────────────────────────────────╯      │"
"│                                                     █ │ │   Team *  ·  Custom.Team (obrigatório) │"
"│                                                     █ │ │ —                                      │"
"│                                                     █ │ │                                        │"
"│                                                     █ │ │   Programa *  ·                        │"
"│                                                     █ │ │ Custom.ProgramasAgrotrace              │"
"│                                                     █ │ │ (obrigatório)                          │"
"│                                                     ║ │ │ —                                      │"
"│                                                     ║ │ │                                        │"
"│                                                     ║ │ │                                        │"
"│                                                     ║ │ │                                        │"
"│                                                     ▼ │ │                                        │"
"╰───────────────────────────────────────────────────────╯ ╰────────────────────────────────────────╯"
"↑/↓ selecionar · d excluir · r atualizar · esc voltar                                               "
