apps/rust/src/tui/snapshots/prt__tui__test_flow__tests__test_confirm_create_100x30.snap
---
source: apps/rust/src/tui/test_flow.rs
expression: "$crate :: tui :: snapshot_value(terminal.backend())"
---
"◆ prt <version>  ·  test  ·  revisão                                                                    "
"card pronto  ·  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  ·  0%"
"╭ Card de teste ────────────────────────────────────────╮ ╭ ⚙ Settings ────────────────────────────╮"
"│ # Card exemplo                                      ▲ │ │   AreaPath  ·  ex.: MeuProjeto\Time    │"
"│                                                     █ │ │ —                                      │"
"│                                                     █ │ │                                        │"
"│ ## Objetivo                                         █ │ │   Responsável (AssignedTo)  ·  email   │"
"│                                                     █ │ │ ou vazio                               │"
"│ X                                                   █ │ │ —                                      │"
"│                                                     █ │ │                                        │"
"│                                                     █ │ │   IterationPath  ·  ex.:               │"
"│                   ╭ Criar ───────────────────────────────────────────────────╮                   │"
"│                   │ Criar este Test Case?                                    │                   │"
"│                   │                                                          │                   │"
"│                   │                       Sim     Não                        │ero > 0 (ex.: 2)   │"
"│                   │                                                          │                   │"
"│                   │ ←/→ alternar · y sim · n não · enter confirmar · esc     │                   │"
"│                   ╰──────────────────────────────────────────────────────────╯Team (obrigatório) │"
"│                                                     █ │ │ —                                      │"
"│                                                     █ │ │                                        │"
"│                                                     █ │ │   Programa *  ·                        │"
"│                                                     █ │ │ Custom.ProgramasAgrotrace              │"
"│                                                     █ │ │ (obrigatório)                          │"
"│                                                     ║ │ │ —                                      │"
"│                                                     ║ │ │                                        │"
"│                                                     ║ │ │                                        │"
"│                                                     ║ │ │                                        │"
"│                                                     ▼ │ │                                        │"
"╰───────────────────────────────────────────────────────╯ ╰────────────────────────────────────────╯"
"←/→ alternar · y sim · n não · enter confirmar · esc voltar                                         "
