apps/rust/src/tui/snapshots/prt__tui__test_flow__tests__test_content_editor_100x30.snap
---
source: apps/rust/src/tui/test_flow.rs
expression: terminal.backend()
---
"◆ prt 6.0.1  ·  test  ·  revisão                                                                    "
"╭ Editar conteúdo ─────────────────────────────────────────────────────────────────────────────────╮"
"│ RASCUNHO  ·  Test Case                                                                           │"
"│ Tab muda campo · Enter cria linha no body · setas navegam                                        │"
"│ ▸ Título  ·  12 caracteres  ·  EDITANDO                                                          │"
"│ ▌ Card exemplo                                                                                   │"
"│ ▌                                                                                                │"
"│ ──────────────────────────────────────────────────────────────────────────────────────────────── │"
"│   Body Markdown  ·  13 caracteres                                                                │"
"│ │ ## Objetivo                                                                                    │"
"│ │ X                                                                                              │"
"│ │                                                                                                │"
"│ │                                                                                                │"
"│ │                                                                                                │"
"│ │                                                                                                │"
"│ │                                                                                                │"
"│ │                                                                                                │"
"│ │                                                                                                │"
"│ │                                                                                                │"
"│ │                                                                                                │"
"│ │                                                                                                │"
"│ │                                                                                                │"
"│ │                                                                                                │"
"│ │                                                                                                │"
"│ │                                                                                                │"
"│ │                                                                                                │"
"│ │                                                                                                │"
"│ Ctrl+S salva · Esc cancela                                                                       │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"Tab alterna título/corpo · Ctrl+S salva · Esc cancela                                               "
