apps/rust/src/tui/snapshots/prt__tui__test_flow__tests__test_create_recovery_100x30.snap
---
source: src/tui/test_flow.rs
expression: terminal.backend()
---
"◆ prt 6.0.1  ·  test  ·  revisão                                                                    "
"card pronto  ·  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  ·  0%"
"╭ Card de teste ────────────────────────────────────────╮ ╭ ⚙ Settings ────────────────────────────╮"
"│ # Card exemplo                                      ▲ │ │   AreaPath  ·  ex.: MeuProjeto\Time    │"
"│                                                     █ │ │ —                                      │"
"│                                                     █ │ │                                        │"
"│ ## Objetivo                                         █ │ │   Responsável (AssignedTo)  ·  email   │"
"│                                                     █ │ │ ou vazio                               │"
"│ X                                                   █ │ │ —                                      │"
"│             ╭ Recuperar envio ─────────────────────────────────────────────────────╮             │"
"│             │ A resposta do Azure não confirmou se o card foi criado.              │             │"
"│             │ Verifique antes de reenviar para evitar duplicidade.                 │             │"
"│             │                                                                      │             │"
"│             │ ▸ editar settings                                                    │             │"
"│             │   verificar possíveis cards                                          │0 (ex.: 2)   │"
"│             │   reenviar mesmo assim                                               │             │"
"│             │   sair                                                               │             │"
"│             │                                                                      │obrigatório) │"
"│             │ ↑/↓ escolher · enter confirmar · esc editar                          │             │"
"│             ╰──────────────────────────────────────────────────────────────────────╯             │"
"│                                                     █ │ │   Programa *  ·                        │"
"│                                                     █ │ │ Custom.ProgramasAgrotrace              │"
"│                                                     █ │ │ (obrigatório)                          │"
"│                                                     ║ │ │ —                                      │"
"│                                                     ║ │ │                                        │"
"│                                                     ║ │ │                                        │"
"│                                                     ║ │ │                                        │"
"│                                                     ▼ │ │                                        │"
"╰───────────────────────────────────────────────────────╯ ╰────────────────────────────────────────╯"
"e editar settings · v verificar cards · r reenviar · enter escolher · esc editar                    "
