apps/rust/src/tui/snapshots/prt__tui__test_flow__tests__test_generating_100x30.snap
---
source: apps/rust/src/tui/test_flow.rs
expression: "$crate :: tui :: snapshot_value(terminal.backend())"
---
"◆ prt <version>  ·  test  ·  gerando                                                                    "
"card via IA…  ·  ███████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  ·  42%"
"╭ Card de teste ────────────────────────────────────────╮ ╭ ⚙ Settings ────────────────────────────╮"
"│ # Card de teste                                     ▲ │ │   AreaPath  ·  ex.: MeuProjeto\Time    │"
"│                                                     █ │ │ —                                      │"
"│ ## Objetivo                                         █ │ │                                        │"
"│ Texto parcial▊                                      █ │ │   Responsável (AssignedTo)  ·  email   │"
"│                                                     █ │ │ ou vazio                               │"
"│                                                     █ │ │ —                                      │"
"│                                                     █ │ │                                        │"
"│                                                     █ │ │   IterationPath  ·  ex.:               │"
"│                                                     █ │ │ MeuProjeto\Sprint 12                   │"
"│                                                     █ │ │ —                                      │"
"│                                                     █ │ │                                        │"
"│                                                     █ │ │   Prioridade  ·  número > 0 (ex.: 2)   │"
"│                                                     █ │ │ —                                      │"
"│                                                     █ │ │                                        │"
"│                                                     █ │ │   Team *  ·  Custom.Team (obrigatório) │"
"│                                                     █ │ │ —                                      │"
"│                                                     █ │ │                                        │"
"│                                                     █ │ │   Programa *  ·                        │"
"│                                                     █ │ │ Custom.ProgramasAgrotrace              │"
"│                                                     █ │ │ (obrigatório)                          │"
"│                                                     █ │ │ —                                      │"
"│                                                     █ │ │                                        │"
"│                                                     ║ │ │                                        │"
"│                                                     ║ │ │                                        │"
"│                                                     ▼ │ │                                        │"
"╰───────────────────────────────────────────────────────╯ ╰────────────────────────────────────────╯"
"j/k rolar preview · q/esc abortar                                                                   "
