apps/rust/src/tui/snapshots/prt__tui__test_flow__tests__test_qa_efforts_100x30.snap
---
source: src/tui/test_flow.rs
expression: terminal.backend()
---
"◆ prt 4.0.11  ·  test  ·  revisão                                                                   "
"card pronto  ·  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  ·  0%"
"╭ Card de teste ────────────────────────────────────────╮ ╭ ⚙ Settings ────────────────────────────╮"
"│ # Card exemplo                                      ▲ │ │   AreaPath  ·  ex.: MeuProjeto\Time    │"
"│                                                     █ │ │ —                                      │"
"│                                                     █ │ │                                        │"
"│ ## Objetivo                                         █ │ │   Responsável (AssignedTo)  ·  email   │"
"│                                                     █ │ │ ou vazio                               │"
"│ X                                                   █ │ │ —                                      │"
"│                                                     █ │ │                                        │"
"│                  ╭ Esforço Test QA ───────────────────────────────────────────╮x.:               │"
"│                  │ horas decimais ≥ 0 · tab troca campo                       │                  │"
"│                  │ ▸ Effort                                                   │                  │"
"│                  │ 1                                                          │                  │"
"│                  │   Real Effort                                              │ro > 0 (ex.: 2)   │"
"│                  │ 1                                                          │                  │"
"│                  │                                                            │                  │"
"│                  │ tab troca campo · enter confirma · esc volta               │eam (obrigatório) │"
"│                  ╰────────────────────────────────────────────────────────────╯                  │"
"│                                                     █ │ │                                        │"
"│                                                     █ │ │   Programa *  ·                        │"
"│                                                     █ │ │ Custom.ProgramasAgrotrace              │"
"│                                                     █ │ │ (obrigatório)                          │"
"│                                                     ║ │ │ —                                      │"
"│                                                     ║ │ │                                        │"
"│                                                     ║ │ │                                        │"
"│                                                     ║ │ │                                        │"
"│                                                     ▼ │ │                                        │"
"╰───────────────────────────────────────────────────────╯ ╰────────────────────────────────────────╯"
"digite o número · tab troca campo · enter confirma · esc volta                                      "
